--- a/portfolio.html
+++ b/portfolio.html
@@ -297,6 +297,27 @@
                 </ul>
             </div>
         </div>
+        <form class="form">
+            <div class="subscribe-form">
+                <div class="alarm">
+                    <p>Подпишитесь на рассылку</p>
+                </div>
+                <div class="form-field">
+                    <label>
+                        <input type="email" name="email" placeholder="E-mail" autofocus />
+                    </label>
+                </div>
+                <div class="form-field">
+                    <button type="submit" class="subscribe-button">
+                        <span class="subscribe-label">Подписаться</span>
+                        <span class="subscribe-icon">
+                            <svg class="send" width="24px" height="24px">
+                                <use href="./images/icons.svg#icon-icon-send"></use>
+                            </svg>
+                    </button>
+                </div>
+            </div>
+        </form>
     </footer>
 
 </body>
