--- a/portfolio.html
+++ b/portfolio.html
@@ -304,7 +304,7 @@
                 </div>
                 <div class="form-field">
                     <label>
-                        <input type="email" name="email" placeholder="E-mail" autofocus />
+                        <input type="email" name="email" placeholder="E-mail" />
                     </label>
                 </div>
                 <div class="form-field">
