--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
             </div>
             <div class="form-field">
             <label>
-                <input type="email" name="email" placeholder="E-mail" />
+                <input class="subscribe-input" type="email" name="email" placeholder="E-mail" />
             </label>
             </div>
             <div class="form-field">
